# provide-foundation

./: .actrc  .gitguardian.yaml  .gitignore  .gitleaks.toml  .rsp_context.json  .secrets.example  .trufflehog-exclude-paths.txt  20250906-1100-a-rpcplugin-docs-convo.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLICK_VS_TYPER_ANALYSIS.md  CLI_IMPLEMENTATION_CHECKLIST.md  CODE_REVIEW.md  CONSOLIDATION_MATRIX.md  CONTRIBUTING.md  COVERAGE_REPORT.md  CRITIQUE-RESPONSE.md  DOCUMENTATION_HANDOFF.md  DOGFOODING.md  DOGFOODING_EVALUATION.md  DOGFOODING_NEXT_STEPS.md  END_STATE_ERROR_HANDLING_ANALYSIS.md  GEMINI.md  IMPROVEMENTS.md  MIGRATION.md  Makefile  NEXT_DOGFOODING_PLAN.md  NEXT_STEPS.md  PLATFORM_PROCESS_INTEGRATION_PLAN.md  PROVIDE_FOUNDATION_ANALYSIS.md  README.md  RELEASE_PREP_SUMMARY.md  RELEASE_READINESS_REPORT.md  REPLACEMENT_CHECKLIST.md  RPCPLUGIN_CONFIG_INTEGRATION.md  SEMANTIC_LAYERS_REVIEW.md  STATUS.md  TESTING_WITH_ACT.md  TESTKIT_MIGRATION_STATUS.md  (+142 more)
.claude/: settings.local.json
.complexity/: complexity.json  complexity_details.txt
.coverage-artifacts/: coverage.txt
.github/workflows/: ci.yml  docs.yml  local-test.yml  performance.yml  release.yml  security.yml
.security/: security.json  security_issues.txt
.specify/memory/: constitution.md
archive/scripts/: setup_github_auth.py
chunker/: conform.py  conform2.py  orchestrator.py
complexity_test/: complexity.json  complexity_details.txt  complexity_summary.txt
docs/: HUB.md  HYPOTHESIS_VALIDATION_AND_PYTORCH_VISION.md  POLYGLOT_AI_VISION.md  RFC_CROSS_LANGUAGE_INFRASTRUCTURE_PATTERNS.md  TESTING_FIXTURES_RECOMMENDATIONS.md  TESTING_WITH_ACT.md  api-reference.md  circular-dependencies.md  config-refactor-plan.md  console-output-implementation-plan.md  dependency-injection.md  ecosystem.md  error-context-patterns.md  flavorpack-conftest-example.py  foundation-errors.md  gen_ref_pages.py  generate_documentation.py  github-auth-helpers.md  index.md  mkdocs.yml  otlp-extraction-spec.md  requirements.txt  resilience-module-refactoring.md  testing-fixtures-migration.md
docs/about/: contributing.md
docs/api/: api-index.md  api-setup.md  archive.md  context.md  core.md  crypto.md  errors.md  file.md  index.md  platform.md  process.md  serialization.md  setup.md  streams.md  transport.md
docs/api-reference/: cli.md  config.md  console.md  errors.md  hub.md  logger.md  platform.md  process.md  registry.md  semantic-layers.md  utils.md
docs/architecture/: circular-dependencies.md  design-decisions.md  emoji-sets.md  emoji-system.md  event-enrichment.md  index.md  limitations.md  performance.md  plugin-system.md  semantic-layers.md  telemetry-format.md  testing-reset-sequence.md
docs/archive/: ARCHITECTURAL_ANALYSIS.md  ARCHITECTURAL_ANALYSIS_ADDENDUM.md  GEMINI.md  OPTIMIZATION_ANALYSIS.md  TASK_SYSTEM_COMPARISON.md  priming_prompt.md
docs/community/: blog.md  discussions.md  index.md  showcase.md  support.md
docs/contributing/: optional-dependencies.md
docs/cookbook/: index.md
docs/core-concepts/: architecture.md  configuration.md  emoji-system.md  semantic-layers.md  structured-logging.md
docs/development/: architecture.md  ci-cd.md  contributing.md  index.md  release.md  roadmap.md
docs/examples/: basic-app.md  cli-tool.md  data-pipeline.md  index.md  web-service.md
docs/explanation/: architecture.md  dependency-injection.md  design-decisions.md
docs/future/: resilient-decorator-enhancements.md
docs/future-implementations/: async-utilities.md
docs/getting-started/: examples.md  first-app.md  index.md  installation.md  quick-start.md
docs/guide/: advanced-usage.md  index.md  testing-advanced.md  testing-basics.md  testing-performance.md  testing.md  when-to-use.md
docs/guides/: async-usage.md  console-io.md  creating-semantic-layers.md  exception-logging.md  performance-tuning.md
examples/: 00_simple_start.py  00_simple_start.py-e  01_quick_start.py  02_custom_configuration.py  03_named_loggers.py  04_das_logging.py  04_das_logging.py-e  05_exception_handling.py  05_exception_handling.py-e  06_trace_logging.py  06_trace_logging.py-e  06_transport_client.py  07_module_filtering.py  07_module_filtering.py-e  08_env_variables_config.py  08_env_variables_config.py-e  09_async_usage.py  09_async_usage.py-e  10_production_patterns.py  10_production_patterns.py-e  11_config_management.py  12_cli_application.py  15_distributed_tracing.py  16_simple_tracing.py  README.md  architecture_improvements.py  config_example.py  hub_demo.py  utils.py
local-wheels/: provide_foundation-0.0.33-py3-none-any.whl
scripts/: apply_header.py  benchmark_performance.py  celery_verification.py  cut_up_chuck.py  debug_xdist_freeze.sh  extreme_performance_test.py  fix_macos_fd_limit.sh  fix_split_imports.py  install-setproctitle-mock.sh  setup_github_auth.py  split_large_tests.py  split_remaining_files.sh  test-parallel.sh  update-all-uv.sh  version_checker.py
src/: sitecustomize.py
stale/: MINIMAL_API_CONSISTENCY_PLAN.md  STALE_DOCUMENTATION_SUMMARY.md  claude-instructions-old.md  resilient-decorator-enhancements.md
tests/: __init__.py  conftest.py  file_operations_fixtures.py  test_async_support.py  test_component_registry.py  test_component_registry_core.py  test_component_registry_handlers.py  test_component_registry_sets.py  test_config.py  test_context.py  test_core.py  test_coverage_100.py  test_coverage_completion.py  test_custom_processors.py  test_docs_generator.py  test_edge_cases.py  test_edge_cases_2.py  test_file_operations.py  test_file_operations_fixtures_simple.py  test_file_operations_integration.py  test_file_operations_patterns.py  test_file_operations_performance.py  test_file_quality.py  test_final_coverage.py  test_fixes.py  test_hub_commands.py  test_hub_components.py  test_hub_context.py  test_hub_registry.py  test_init_coverage.py  test_integration.py  test_lazy_init.py  test_lazy_init_edge_cases.py  test_lazy_init_integrations.py  test_lazy_init_streams.py  test_lazy_setup_flag.py  test_logger_base.py  test_logging.py  test_nested_commands.py  test_nested_commands_new.py  (+12 more)
(+1901 files in other folders)
